--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
 
 .header nav {
     padding-top: 15px;
+    padding-bottom: 0;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -55,6 +56,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    padding: 0;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
