--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+/*first div had to become a header since a header tag was missing*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +24,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/*Here div tag was switched to nav to give a more accurate tag*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,11 +32,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/*div became nav because people will navigate depending on what they click*/
 .header nav ul {
     list-style-type: none;
 }
-
+/*This div affected the list so it became nav because it refers to the ul in the nav bar*/
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -50,7 +50,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/*Made the image of hero a section because the img tag was overstretching the image*/
 .hero {
     height: 800px;
     width: 100%;
@@ -189,7 +189,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*footer was added to replace the div tag*/
 .footer {
     padding: 30px;
     clear: both;
